# FunGen-AI-Powered-Funscript-Generator

./: .gitignore  ARCHITECTURE_ANALYSIS_SUMMARY.md  ARCHITECTURE_QUICK_REFERENCE.txt  CODEBASE_ARCHITECTURE.md  COMPLETE_FEATURE_MAPPING.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KEY_FILES_GUIDE.txt  OPTIMIZATION_CHANGELOG.md  OPTIONS_WINDOW_DESIGN.md  PHASE1_SUMMARY.md  README.md  REFACTORING_PROGRESS.md  REFACTORING_ROADMAP.md  UI_MOCKUP.html  VIDEO_PROCESSOR_REVIEW.md  addon_versions.json  core.requirements.txt  cuda.50series.requirements.txt  cuda.requirements.txt  custom_chapter_types.json  environment.yml  fix_multi_imports.py  imgui.ini  install.bat  install.py  install.sh  install_linux.sh  install_mac.sh  launch.command  launch.sh  main.py  pyproject.toml  pytest.ini  uninstall.py  update_imports.py
.github/: FUNDING.yml
bench/: cli.py  harness.py  registry.py
common/: __init__.py  addon_status.py  file_cleanup.py  http_client_manager.py  paths.py  service_state.py  threaded_job.py  throttle.py  ws_api.py
config/: constants.py  constants_colors.py  element_group_colors.py  theme_manager.py  tracker_discovery.py  typed_settings.py  ui_metrics.py
funscript/: __init__.py  action_editor.py  axis_registry.py  dual_axis_funscript.py  heatmap_export.py  multi_axis_funscript.py  pattern_library.py  plugin_controller.py  quality_validator.py  signal_processor.py
requirements/: base.txt  core.requirements.txt  cpu.requirements.txt  mps.txt
streamer/: sync_server.py
tests/: conftest.py  test_batch_worker_parallel.py  test_scrub_cache.py  test_settings_manager.py  test_smoke_e2e.py  test_yolo_detection_helper.py
tracker/: tracker.py  tracker_manager.py
utils/: __init__.py
video/: _vp_dual_output.py  _vp_ffmpeg_builders.py  _vp_format_detection.py  _vp_metrics.py  _vp_nav_buffer.py  _vp_segment_streaming.py  audio_player.py  audio_video_sync.py  dual_frame_processor.py  ffmpeg_helpers.py  frame_cache.py  gpu_unwarp_worker.py  mpv_display.py  mpv_display_gl.py  mpv_ipc_bridge.py  mpv_loader.py  mpv_probe.py  (+10 more)
(+321 files in other folders)
